- 07: Bugfix #579 - Conditional breakpoints didn't always show correctly <2>
- 07: Bugfix #581 - To start Structorizer with a list of files failed. <2>
- 08: Several locale updates <2>
- 08: Bugfix #583: Shell scripts corrected (Java tests) [K. Brodowski, S. Sobisch]
- 08: Enh. #585: Debian install packages now derived via scripts [K. Brodowski]
- 08: Fix #508: Padding of diagram elements now proportional to font size [2]
- 08: Bugfix #512: Arranger zoom could compromise the diagram size by rounding <2>

Version 3.28 (2018-02-18)
- 01: Bugfix #445: Array index out of bounds errors on COBOL import <2>
- 01: Bugfix #447: Line continuation backslashes in IF, CASE, FOR defanged <2>
- 01: Bugfix #417: Division by 0 exception averted in scroll unit adaptation <2>
- 02: Bugfix #448: Endless loop and regex exceptions in Find & Replace fixed <2>
- 02: Enh. #439: Structured value presenter with pull-down buttons now recursive <2>
- 02: Enh. #452: Welcome message on first start with beginner mode and guides <2>
- 02: Enh. #453: C export: format strings now with "TODO" content [Rolf Schmidt]2
- 02: Enh. #454: Analyser check now complains about blanks in program names <2>
- 02: Enh. #456: Print preview now allows to customize orientation and margins <2>
- 02: Issue #455: Startup races and mis-drawing of initial diagrams reduced <2>
- 03: Enh. #415: New accelerator key Ctrl-Shift-d for "copy EMF image" <2>
- 03: Enh. #452: Guided tours slightly improved, typos corrected [Rolf Schmidt]2
- 03: Bugfix #465: Arranger couldn't open Structorizer sub-instances anymore <2>
- 04: Bugfix #468: User guide action was associated to wrong toolbar button <2>
- 04: Enh. #452/#459: Further revision to the mechanisms of the guided tours <2>
- 04: Enh. #469: Accelerator keys for Executor (Ctrl-R) and Turtleizer <2>
- 04: Bugfixes in COBOL import (USAGE parsing, SEARCH, EXIT) <Simon Sobisch>
- 04: Issue #471: Code import error can now be copied to clipboard [Simon Sobisch]2